--- a/frontend/src/app/pages/houses-list/houses-list.page.html
+++ b/frontend/src/app/pages/houses-list/houses-list.page.html
@@ -13,7 +13,8 @@
 <ion-content>
   <ion-row *ngFor="let h of houses">
     <ion-col sizeMd="6" sizeXs="12">
-      <ion-card class="ion-padding">
+      <ion-card>
+        <img *ngIf="h.image" src="http://localhost:8080/images/{{h.image}}" alt="image">
         <ion-card-header>
           <ion-card-subtitle>{{h.location}}</ion-card-subtitle>
           <ion-card-title>{{h.title}}</ion-card-title>
@@ -21,7 +22,9 @@
         <ion-text color="blue">
           <h3 class="ion-margin-end ion-text-end">{{h.price}}€</h3>
         </ion-text>
-        <ion-button expand="full" fill="solid" size="default" routerLink="/detail/{{h.id}}">View</ion-button>
+        <ion-card-content>
+          <ion-button expand="full" fill="solid" size="default" routerLink="/detail/{{h.id}}">View</ion-button>
+        </ion-card-content>
       </ion-card>
     </ion-col>
   </ion-row>
