--- a/frontend/src/assets/styles/app.scss
+++ b/frontend/src/assets/styles/app.scss
@@ -23,8 +23,8 @@
   display: flex;
 
   .img-thumb {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto
   }
 }
 
@@ -37,3 +37,15 @@ swp-img {
   top: 3%;
   margin: 0 auto;
 }
+
+.dlt-img-upt {
+  position: absolute;
+  top: 3%;
+  right: 5%;
+}
+
+// .upt-img {
+//   position: absolute;
+//   top: 3%;
+//   left: 5%;
+// }
