--- a/frontend/src/assets/styles/app.scss
+++ b/frontend/src/assets/styles/app.scss
@@ -3,7 +3,6 @@
 }
 
 .test {
-  // z-index: -1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,13 +22,9 @@
   display: flex;
 
   .img-thumb {
-    width: auto;
-    height: auto
+    width: 100%;
+    height: 100%
   }
-}
-
-swp-img {
-  width: 100%;
 }
 
 .dlt-img {
@@ -43,9 +38,3 @@ swp-img {
   top: 3%;
   right: 5%;
 }
-
-// .upt-img {
-//   position: absolute;
-//   top: 3%;
-//   left: 5%;
-// }
