--- a/frontend/src/app/pages/new-rent/new-rent.page.html
+++ b/frontend/src/app/pages/new-rent/new-rent.page.html
@@ -14,7 +14,7 @@
             <ion-icon name="add-outline"></ion-icon>
           </ion-fab-button>
           <ion-fab-list side="start">
-            <ion-fab-button color="warning">
+            <ion-fab-button color="warning" (click)="takePhoto()">
               <ion-icon name="camera-outline"></ion-icon>
             </ion-fab-button>
           </ion-fab-list>
